cluster/apps/homepage/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: homepage-deployment
  namespace: default
  labels:
    app: homepage
spec:
  replicas: 1
  selector:
    matchLabels:
      app: homepage
  template:
    metadata:
      labels:
        app: homepage
    spec:
      securityContext:
        runAsUser: 1000
        runAsGroup: 1000
        fsGroup: 1000
      containers:
        - name: homepage
          image: ghcr.io/gethomepage/homepage:latest
          ports:
            - containerPort: 3000
              name: http
          # La variable de hosts permitidos que ya corregimos
          volumeMounts:
            - name: homepage-config-volume
              mountPath: /app/config

      # --- CORRECCIÓN IMPORTANTE AQUÍ ---
      volumes:
        - name: homepage-config-volume
          # Le decimos que el volumen debe usar nuestro ConfigMap
          configMap:
            name: homepage-config # El nombre de tu ConfigMap
